Updates and add email

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
-    "name": "katallaxie/card",
+    "name": "anleac/card",
     "image": "mcr.microsoft.com/vscode/devcontainers/javascript-node:latest"
 }
